--- a/FieldsBox/.classpath
+++ b/FieldsBox/.classpath
@@ -3,5 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-core"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-desktop"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-jogg"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-lwjgl"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/AseLoader"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/InxLoader"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/slf4j"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
