--- a/FieldsBox/.classpath
+++ b/FieldsBox/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/AseLoader"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/InxLoader"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/slf4j"/>
+	<classpathentry kind="lib" path="libs/jyaml-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
