--- a/FieldsBox/.classpath
+++ b/FieldsBox/.classpath
@@ -6,6 +6,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-desktop"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-jogg"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-lwjgl"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/groovy"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/guava"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/lemur"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/AseLoader"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/InxLoader"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/slf4j"/>
