添加了一个鼠标模块，可以在程序内使用精灵的鼠标。 但是使用起来有点不流畅。

--- a/FieldsBox/.classpath
+++ b/FieldsBox/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/InxLoader"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/slf4j"/>
 	<classpathentry kind="lib" path="libs/jyaml-1.3.jar"/>
+	<classpathentry kind="src" path="/Assets"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
