--- a/FieldsBox/.settings/org.eclipse.core.resources.prefs
+++ b/FieldsBox/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/org/pstale/launcher/SettingsDialog_zh_CN.properties=ISO-8859-1
 encoding/<project>=UTF-8
