--- a/FieldsBox/.classpath
+++ b/FieldsBox/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="org/pstale/launcher/Launcher.java" kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-core"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-desktop"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-jogg"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-lwjgl"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/groovy"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/guava"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/lemur"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-jbullet"/>
