--- a/FieldsBox/.classpath
+++ b/FieldsBox/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry excluding="org/pstale/launcher/Launcher.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="skycontrol"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-core"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-desktop"/>
@@ -11,5 +12,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/lemur"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-jbullet"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/slf4j"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-terrain"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jme3-effects"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
