删除了没有用的代码

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,9 @@
-include 'Aging'
 include 'Assets'
 include 'DataEntity'
 include 'FieldsBox'
 include 'GUI'
-include 'ImageDecoder'
 include 'JPsTale-AssetLoader'
+include 'JPsTale-Core'
 include 'JPsTale-Tool'
-include 'NewSmdLoader'
 
 rootProject.name = 'JPsTale'
