--- a/JPsTale-Core/build.gradle
+++ b/JPsTale-Core/build.gradle
@@ -5,4 +5,6 @@ dependencies {
     
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'org.slf4j:slf4j-log4j12:1.7.21'
+    
+    testCompile 'junit:junit:4.12'
 }
