增加了一些测试模型文件

--- a/JPsTale-AssetLoader/build.gradle
+++ b/JPsTale-AssetLoader/build.gradle
@@ -11,6 +11,12 @@ sourceSets {
             srcDir 'src/script/java'
         }
     }
+    
+    test {
+        resources {
+        	srcDir rootProject.file('Assets');
+        }
+    }
 }
 
 dependencies {
